Working on problem six

--- a/evelyn_charles_Homework1/index.html
+++ b/evelyn_charles_Homework1/index.html
@@ -28,7 +28,8 @@
         <canvas id="myCanvas6" width="250" height="200">Note: Your browser may not support the canvas tag</canvas>
 
         <canvas id="myCanvas7" width="250" height="200">Note: Your browser may not support the canvas tag</canvas>
-
+        
+        <img id="hand" src="image/hand-pointer-md.png" style="display: none;" />
     </div>
 
 	<script src="js/main.js"></script>
