--- a/evelyn_charles_Homework1/index.html
+++ b/evelyn_charles_Homework1/index.html
@@ -29,7 +29,7 @@
 
         <canvas id="myCanvas7" width="250" height="200">Note: Your browser may not support the canvas tag</canvas>
         
-        <img id="hand" src="image/hand-pointer-md.png" style="display: none;" >
+        <img id="theImage" src="image/logo.png" style="display: none;" />
     </div>
 
 	<script src="js/main.js"></script>
