updated the myHeadroom.js file

--- a/evelyn_charles_WIA_Presentation/evelyn_charles_WIA_webFiles/index.html
+++ b/evelyn_charles_WIA_Presentation/evelyn_charles_WIA_webFiles/index.html
@@ -17,12 +17,12 @@
 <script type="text/javascript" src="js/jQuery.headroom.js"></script>
 <link rel="stylesheet" type="text/css" href="css/demostyle.css"/>
 <link rel="stylesheet" type="text/css" href="css/animate.css"/>
-<
+
 
 </head>
 	<body>
 		<header>
-			<section class="headStripe">
+			<section id="headStripe" class="headStripe">
 				<ul class="socialIcons">
 					<li><img src="images/facebook.png" /></li>
 					<li><img src="images/twitter.png" /></li>
@@ -117,6 +117,6 @@
 			<h4>a subsidiary of UniqueOne Networks, LLC</h4>
 			<h5>&copy;2012</h5>
 		</footer>
-		<script type="text/javascript" src="js/myHeadroom.js"></script>
+		<script src="js/myHeadroom.js"></script>
 	</body>
 </html>
