cleaned up CSS file

--- a/evelyn_charles_WIA_Presentation/evelyn_charles_WIA_webFiles/index.html
+++ b/evelyn_charles_WIA_Presentation/evelyn_charles_WIA_webFiles/index.html
@@ -13,7 +13,7 @@
     }
   </style>
 <![endif]-->
-<script src="js/headroom.js"></script>
+<script type="text/javascript" src="js/headroom.js"></script>
 <script type="text/javascript" src="js/jQuery.headroom.js"></script>
 <link rel="stylesheet" type="text/css" href="css/demostyle.css"/>
 <link rel="stylesheet" type="text/css" href="css/animate.css"/>
@@ -117,6 +117,6 @@
 			<h4>a subsidiary of UniqueOne Networks, LLC</h4>
 			<h5>&copy;2012</h5>
 		</footer>
-		<script src="js/myHeadroom.js"></script>
+		<script type="text/javascript" src="js/myHeadroom.js"></script>
 	</body>
 </html>
