updated js and css files

--- a/evelyn_charles_WIA_The_Project/about.html
+++ b/evelyn_charles_WIA_The_Project/about.html
@@ -202,5 +202,7 @@
 		</footer>
 		<script type="text/javascript" src="js/uniqueOneNet-Viz.js"></script>
 		<script type="text/javascript" src="js/uniqueOneNet-Easel.js"></script>
+		<script type="text/javascript" src="js/interactiveMap.js"></script>
+		<script type="text/javascript" src="js/uniqueOneNet-Modern.js"></script>
 	</body>
 </html>
