--- a/evelyn_charles_WIA_The_Project/vendor-directory.html
+++ b/evelyn_charles_WIA_The_Project/vendor-directory.html
@@ -151,6 +151,7 @@
 				&copy 2014.</p></li>
 			</ul>			
 		</footer>
+		<script type="text/javascript" src="js/uniqueOneNet-Modern.js"></script>
 		<script type="text/javascript" src="js/uniqueOneNet-Viz.js"></script>
 		<script type="text/javascript" src="js/uniqueOneNet-Easel.js"></script>
 	</body>
